--- a/noob-demo/pom.xml
+++ b/noob-demo/pom.xml
@@ -2,21 +2,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
+    <!--<parent>
         <artifactId>noob-parent</artifactId>
         <groupId>com.lemuria.noob</groupId>
         <version>0.0.1-SNAPSHOT</version>
+    </parent>-->
+    <!-- 理清spring的依赖后把spring父工程去掉。。。-->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.3.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.lemuria.noob</groupId>
     <artifactId>noob-demo</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>noob-demo-api</module>
         <module>noob-demo-consumer</module>
         <module>noob-demo-provider</module>
     </modules>
+    <properties>
+        <spring_boot_version>2.1.3.RELEASE</spring_boot_version>
+        <noob_version>0.0.1-SNAPSHOT</noob_version>
+        <curator_version>4.1.0</curator_version>
+        <javassist_version>3.20.0-GA</javassist_version>
+        <dubbo_version>2.7.0</dubbo_version>
+        <lombok_version>1.18.6</lombok_version>
+    </properties>
     <dependencies>
+        <!-- TODO 这里还依赖了springboot starter父工程-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -25,22 +41,53 @@
         <dependency>
             <groupId>com.lemuria.noob</groupId>
             <artifactId>noob-client</artifactId>
-            <version>${version}</version>
+            <version>${noob_version}</version>
         </dependency>
         <dependency>
             <groupId>com.lemuria.noob</groupId>
             <artifactId>noob-service</artifactId>
-            <version>${version}</version>
+            <version>${noob_version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok_version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
+            <version>${dubbo_version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>${javassist_version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>${curator_version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>${curator_version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.25.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.56</version>
+        </dependency>
     </dependencies>
 
 </project>
