--- a/noob-demo/noob-demo-provider/pom.xml
+++ b/noob-demo/noob-demo-provider/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>jetty-servlet</artifactId>
             <version>9.4.17.v20190418</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-dubbo-adapter</artifactId>
+            <version>${sentinel_version}</version>
+        </dependency>
 
     </dependencies>
 
