--- a/noob-demo/noob-demo-provider/pom.xml
+++ b/noob-demo/noob-demo-provider/pom.xml
@@ -34,9 +34,21 @@
             <artifactId>jetty-servlet</artifactId>
             <version>9.4.17.v20190418</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-http -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-http</artifactId>
+            <version>9.4.17.v20190418</version>
+        </dependency>
+
         <dependency>
             <groupId>com.alibaba.csp</groupId>
-            <artifactId>sentinel-dubbo-adapter</artifactId>
+            <artifactId>sentinel-apache-dubbo-adapter</artifactId>
+            <version>${sentinel_version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-transport-simple-http</artifactId>
             <version>${sentinel_version}</version>
         </dependency>
 
