--- a/noob-demo/pom.xml
+++ b/noob-demo/pom.xml
@@ -22,6 +22,8 @@
         <module>noob-demo-api</module>
         <module>noob-demo-consumer</module>
         <module>noob-demo-provider</module>
+        <module>noob-demo-provder2</module>
+        <module>noob-demo-provider3</module>
     </modules>
     <properties>
         <spring_boot_version>2.1.3.RELEASE</spring_boot_version>
@@ -65,9 +67,20 @@
             <version>${javassist_version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.13</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
             <version>${curator_version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.zookeeper</groupId>
+                    <artifactId>zookeeper</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
