--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,10 @@
         <module>noob-service</module>
         <module>noob-demo</module>
         <module>noob-common</module>
+        <module>noobbo</module>
     </modules>
     <properties>
-        <dubbo_version>2.7.0</dubbo_version>
+        <dubbo_version>2.7.3</dubbo_version>
         <spring_boot_version>2.1.3.RELEASE</spring_boot_version>
         <curator_version>4.1.0</curator_version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,18 +32,7 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-recipes</artifactId>
-        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
